--- a/index.html
+++ b/index.html
@@ -6,72 +6,146 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Edu-Care</title>
-<link rel="shortcut icon" href="images/techeducare-logo.png" type="image/x-icon">
-<!-- Bootstrap Link  -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<!-- Custom CSS Link  -->
-<link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="images/techeducare-logo.png" type="image/x-icon">
+    <!-- Bootstrap Link  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!-- Custom CSS Link  -->
+    <link rel="stylesheet" href="styles.css">
 
-<!-- Google Fonts Link -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700&display=swap" rel="stylesheet">
+    <!-- Google Fonts Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;700&display=swap" rel="stylesheet">
 
-<!-- Font Awesome Link  -->
-<script src="https://kit.fontawesome.com/a4e583ead6.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome Link  -->
+    <script src="https://kit.fontawesome.com/a4e583ead6.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-<!-- Header Start -->
-<header>
-    <!-- Navbar Start  -->
-    <section>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container">
+    <!-- Header Start -->
+    <header>
+        <!-- Navbar Start  -->
+        <section>
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container">
 
-              <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid" width="48" height="24"> <span class="fs-2 fw-bold text-warning">TECH</span> <span class="text-muted">Edu-Care</span></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+                    <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid"
+                            width="48" height="24"> <span class="fs-2 fw-bold text-warning">TECH</span> <span
+                            class="text-muted">Edu-Care</span></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-              <div class="collapse navbar-collapse ms-md-5" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Courses</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Deals</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Success</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="btn btn-primary" href="#">Register</a>
-                  </li>
-                 
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
+                    <div class="collapse navbar-collapse ms-md-5" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Deals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Success</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-primary" href="#">Register</a>
+                            </li>
+
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </section>
+        <!-- Navbar End  -->
+        <!-- Sliding Start  -->
+        <section class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+
+                <div class="carousel-inner">
+
+                    <!-- Slide-01 -->
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
+                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">It is a long established fact that a reader will be distracted by the
+                                    readable content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary"> Get Started</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slide-02 -->
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-4.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
+                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">It is a long established fact that a reader will be distracted by the
+                                    readable content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary"> Get Started</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Slide-03 -->
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-3.png" class="d-block w-100"  alt="...">
+                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
+                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">It is a long established fact that a reader will be distracted by the
+                                    readable content of a page when looking at its layout.</p>
+                                <a href="#" class="btn btn-primary"> Get Started</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-          </nav>
-    </section>
-    <!-- Navbar End  -->
-</header>
+        </section>
+        <!-- Sliding End -->
+    </header>
 
-<!-- Header End -->
+    <!-- Header End -->
 
     <!-- Bootstrap JS Link  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
     <!-- Bootstrap JS Link  -->
 
 </body>
