course section added with responsive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary" href="#">Register</a>
+                                <a class="btn btn-warning" href="#">Register</a>
                             </li>
 
                         </ul>
@@ -90,41 +90,41 @@
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
-                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                            <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
                                 <p class="py-3">It is a long established fact that a reader will be distracted by the
                                     readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-primary"> Get Started</a>
+                                <a href="#" class="btn btn-warning"> Get Started</a>
                             </div>
                         </div>
                     </div>
                     <!-- Slide-02 -->
                     <div class="carousel-item active">
-                        <img src="images/cover/cover-4.png" class="d-block w-100" alt="...">
+                        <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
-                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                            <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
                                 <p class="py-3">It is a long established fact that a reader will be distracted by the
                                     readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-primary"> Get Started</a>
+                                <a href="#" class="btn btn-warning"> Get Started</a>
                             </div>
                         </div>
                     </div>
                     <!-- Slide-03 -->
                     <div class="carousel-item active">
-                        <img src="images/cover/cover-3.png" class="d-block w-100"  alt="...">
+                        <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
-                            <div class="d-flex justify-content center align-items-center flex-column h-100">
+                            <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
                                 <p class="py-3">It is a long established fact that a reader will be distracted by the
                                     readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-primary"> Get Started</a>
+                                <a href="#" class="btn btn-warning"> Get Started</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-
+                <!-- Carousel Control Button  -->
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -135,12 +135,118 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
+                <!-- Carousel Control Button  -->
             </div>
         </section>
         <!-- Sliding End -->
     </header>
 
     <!-- Header End -->
+    <!-- Main Start  -->
+    <main>
+        <!-- Discover Courses Start-->
+        <section class="container mt-5 mb-3">
+            <div class="text-center">
+                <h2 class="fs-1 fw-bold">Discover Our Popular Courses</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout.</p>
+            </div>
+            <div class="row row-cols-md-2 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
+                <div class="card p-0" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-1.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
+                                <small class="card-text ">There are many important principles within UX design, we’ve broken them down into five main concepts...</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb- p-0 " style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-2.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Javascript Basic to advanced
+                                </h5>
+                                <small class="card-text ">It is a very powerful client-side scripting language that makes your webpage more lively and interactive.</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb- p-0 " style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-3.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Fullstack Web Development
+                                </h5>
+                                <small class="card-text ">Required are Development Languages, Database, Basic design ability, Server, Working with API and version control systems</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb- p-0 " style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-4.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Digital Marketing
+                                </h5>
+                                <small class="card-text ">Your digital marketing objectives should be SMART and you should benchmark against your competitors.</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb- p-0 " style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-5.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Photography Basic Rules
+                                </h5>
+                                <small class="card-text ">Learning about light, exposure, color, tone... etc will help you produce more creative,interesting, noticeable photographs</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb- p-0 " style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="images/course/course-6.png" class="img-fluid rounded-start  " alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title fw-bold">Motion Graphics
+                                </h5>
+                                <small class="card-text ">There are four main business objectives that motion graphics can help achieve: explaining, training, selling, and telling.</small> <br>
+                                <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!-- Discover Courses End-->
+    </main>
+    <!-- Main End -->
 
     <!-- Bootstrap JS Link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
