--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a class="nav-link" href="#">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-warning" href="#">Register</a>
+                                <a class="btn btn-warning text-light" href="#">Register</a>
                             </li>
 
                         </ul>
@@ -94,7 +94,7 @@
                                 <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
                                 <p class="py-3">It is a long established fact that a reader will be distracted by the
                                     readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-warning"> Get Started</a>
+                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                 <p>It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
             </div>
-            <div class="row row-cols-md-2 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
+            <div class="row row-cols-md-1 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
                 <div class="card p-0" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
@@ -160,7 +160,8 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Fundamental Of UI/UX Design</h5>
-                                <small class="card-text ">There are many important principles within UX design, we’ve broken them down into five main concepts...</small> <br>
+                                <small class="card-text ">There are many important principles within UX design, we’ve
+                                    broken them down into five main concepts...</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -175,7 +176,8 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Javascript Basic to advanced
                                 </h5>
-                                <small class="card-text ">It is a very powerful client-side scripting language that makes your webpage more lively and interactive.</small> <br>
+                                <small class="card-text ">It is a very powerful client-side scripting language that
+                                    makes your webpage more lively and interactive.</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -190,7 +192,8 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Fullstack Web Development
                                 </h5>
-                                <small class="card-text ">Required are Development Languages, Database, Basic design ability, Server, Working with API and version control systems</small> <br>
+                                <small class="card-text ">Required are Development Languages, Database, Basic design
+                                    ability, Server, Working with API and version control systems</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -205,7 +208,8 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Digital Marketing
                                 </h5>
-                                <small class="card-text ">Your digital marketing objectives should be SMART and you should benchmark against your competitors.</small> <br>
+                                <small class="card-text ">Your digital marketing objectives should be SMART and you
+                                    should benchmark against your competitors.</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -220,7 +224,8 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Photography Basic Rules
                                 </h5>
-                                <small class="card-text ">Learning about light, exposure, color, tone... etc will help you produce more creative,interesting, noticeable photographs</small> <br>
+                                <small class="card-text ">Learning about light, exposure, color, tone... etc will help
+                                    you produce more creative,interesting, noticeable photographs</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -235,7 +240,8 @@
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Motion Graphics
                                 </h5>
-                                <small class="card-text ">There are four main business objectives that motion graphics can help achieve: explaining, training, selling, and telling.</small> <br>
+                                <small class="card-text ">There are four main business objectives that motion graphics
+                                    can help achieve: explaining, training, selling, and telling.</small> <br>
                                 <p class="pt-3 card-text text-warning fw-semibold">Price: 20$</p>
                             </div>
                         </div>
@@ -245,6 +251,54 @@
 
         </section>
         <!-- Discover Courses End-->
+
+        <!-- Explore E-learning Start   -->
+
+        <section class="container mt-5">
+            <div class="card mb-3" style="max-width: 1150px;">
+                <div class="row g-0">
+                    <div class="col-md-5">
+                        <img src="images/working.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-7 py-5 px-3 elearning-bg-info">
+                        <div class="card-body">
+                            <h2 class="card-title fs-1 fw-bold pb-3">Explore The elearning
+                                Institute</h2>
+                            <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have suffered alteration in some form, by injected humour, or
+                                randomised words which don't look even slightly believable. If you are going
+                                to use a passage of Lorem Ipsum, you need to be sure
+                                <br><br> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum
+                                generators on the Internet tend to repeat predefined.
+                            </p>
+                            <div class="d-flex justify-content-between my-3">
+                                <div>
+                                    <h3 class="fs-1 fw-bold">3.2K+</h3>
+                                    <p class="text-muted">Online Course</p>
+                                </div>
+                                <div>
+                                    <h3 class="fs-1 fw-bold">600+</h3>
+                                    <p class="text-muted">Expert member
+                                    </p>
+                                </div>
+                                <div>
+                                    <h3 class="fs-1 fw-bold">1k+
+                                    </h3>
+                                    <p class="text-muted">Rating & Review
+                                    </p>
+                                </div>
+                            </div>
+
+                            <a href="#" class="btn btn-warning text-light">Read More</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Explore E-learning End   -->
     </main>
     <!-- Main End -->
 
