--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
-                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
-                                <p class="py-3">It is a long established fact that a reader will be distracted by the
-                                    readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
+                                <h1 class="fs-1 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">Educational technology is the combined use of computer hardware,
+                                    software, and educational theory and practice to facilitate learning.</p>
+                                <a href="#" class="btn btn-warning text-light text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -103,10 +103,10 @@
                         <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
-                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
-                                <p class="py-3">It is a long established fact that a reader will be distracted by the
-                                    readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-warning"> Get Started</a>
+                                <h1 class="fs-1 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">Educational technology is the combined use of computer hardware,
+                                    software, and educational theory and practice to facilitate learning.</p>
+                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -115,10 +115,10 @@
                         <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
-                                <h1 class="fs-2 fw-semibold">Get Started Digital Learning</h1>
-                                <p class="py-3">It is a long established fact that a reader will be distracted by the
-                                    readable content of a page when looking at its layout.</p>
-                                <a href="#" class="btn btn-warning"> Get Started</a>
+                                <h1 class="fs-1 fw-semibold">Get Started Digital Learning</h1>
+                                <p class="py-3">Educational technology is the combined use of computer hardware,
+                                    software, and educational theory and practice to facilitate learning.</p>
+                                <a href="#" class="btn btn-warning text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
         <!-- Explore E-learning Start   -->
 
         <section class="container mt-5">
-            <div class="card mb-3" style="max-width: 1150px;">
+            <div class="card mb-3" style="max-width: 100%;">
                 <div class="row g-0">
                     <div class="col-md-5">
                         <img src="images/working.png" class="img-fluid rounded-start" alt="...">
@@ -299,6 +299,79 @@
         </section>
 
         <!-- Explore E-learning End   -->
+
+        <!-- Registration Section Start  -->
+        <section class="container bg-primary rounded-3 my-5 p-5 " style="height: 250px;">
+            <div class="d-md-flex justify-content-evenly align-items-center  ">
+                <div class="text-light">
+                    <h3>Ready to Join?</h3>
+                    <p>Don't be late. Register now to grab your learning opportunity.</p>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-light text-primary fw-bold" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                        Register Now
+                    </button>
+                </div>
+            </div>
+            <!-- Modal Start -->
+        <!-- Button trigger modal -->
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header p-5 pb-4 border-bottom-0">
+                        <!-- <h5 class="modal-title">Modal title</h5> -->
+                        <h2 class="fw-bold mb-0">Sign up for free</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+
+                    <div class="modal-body p-5 pt-0">
+                        <form class="">
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control rounded-3" id="floatingInput"
+                                    placeholder="name@example.com">
+                                <label for="floatingInput">Email address</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="password" class="form-control rounded-3" id="floatingPassword"
+                                    placeholder="Password">
+                                <label for="floatingPassword">Password</label>
+                            </div>
+                            <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Sign up</button>
+                            <small class="text-muted">By clicking Sign up, you agree to the terms of use.</small>
+                            <hr class="my-4">
+                            <h2 class="fs-5 fw-bold mb-3">Or use a third-party</h2>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-dark rounded-3" type="submit">
+                                <svg class="bi me-1" width="16" height="16">
+                                    <use xlink:href="#twitter" />
+                                </svg>
+                                Sign up with Twitter
+                            </button>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
+                                <svg class="bi me-1" width="16" height="16">
+                                    <use xlink:href="#facebook" />
+                                </svg>
+                                Sign up with Facebook
+                            </button>
+                            <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
+                                <svg class="bi me-1" width="16" height="16">
+                                    <use xlink:href="#github" />
+                                </svg>
+                                Sign up with GitHub
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal End -->
+        </section>
+
+        
+        <!-- Registration Section ENd  -->
     </main>
     <!-- Main End -->
 
@@ -306,6 +379,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+
+   
     <!-- Bootstrap JS Link  -->
 
 </body>
