--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="container">
 
                     <a class="navbar-brand" href="#"> <img src="images/techeducare-logo.png" alt="" class="img-fluid"
-                            width="48" height="24"> <span class="fs-2 fw-bold text-warning">TECH</span> <span
+                            width="48" height="24"> <span class="fs-2 fw-bold text-warning pt-4">TECH</span> <span
                             class="text-muted">Edu-Care</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -429,6 +429,81 @@
             </div>
         </section>
         <!-- Successful Students Section End  -->
+        <!-- Students Feedback Section Start  -->
+
+        <section class="container mt-5 mb-5">
+            <div class="mb-5 text-center">
+                <h3 class="fs-1 font-bold"> Some Students Feedback </h3>
+                <p>Read some feedback from our Successful students who now working in some reputed Companies. </p>
+            </div>
+
+            <div class="row row-cols-lg-2 row-cols-md-2 row-cols-1 g-5 d-flex justify-content-evenly ">
+                <div class="card p-4 rounded-3 position-relative" style="width: 32rem;">
+
+                    <div class="d-flex justify-content-between">
+                        <img src="images/comma.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-regular fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+                    <div class="card-body text-justify">
+                        <p class="card-text text-muted  ">After taking the course from <b>Tech Edu-care</b> , I
+                            developed a dedication to my work that I did not have before. Also, I learn more about web
+                            application technology for my career. Thanks to all the <b>Tech Edu-care</b> team for this,
+                            I could not have gone to today's position without them. </p>
+                        <div class="d-flex align-items-center ">
+                            <img src="images/student/student-5.png" alt="" class="img-fluid">
+                            <div class="ps-2">
+                                <h6 class="pt-4">Rakibul Islam (Rakib) </h6>
+                                <p class="text-muted">Web Developer</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <i
+                        class="fa-solid fa-circle-chevron-left fs-1 text-info d-sm-none d-md-block position-absolute top-50 start-0 translate-middle"></i>
+                </div>
+                <div class="card p-4 rounded-3 position-relative " style="width: 32rem;">
+
+                    <div class="d-flex justify-content-between">
+                        <img src="images/comma.png" alt="">
+                        <div>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-solid fa-star text-warning"></i>
+                            <i class="fa-regular fa-star text-warning"></i>
+                        </div>
+                    </div>
+
+
+                    <div class="card-body text-justify">
+                        <p class="card-text text-muted  "> Your course material and teaching method are super easy to
+                            understand. After completing the course I have followed your interaction and finally get a
+                            job. Thanks to all team members of <b>Tech Edu-care</b> </p>
+                        <div class="d-flex align-items-center ">
+                            <img src="images/student/student-6.png" alt="" class="img-fluid">
+                            <div class="ps-2">
+                                <h6 class="pt-4">Sumaiya Shimu </h6>
+                                <p class="text-muted">UIUX Designer </p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <i
+                        class="fa-solid fa-circle-chevron-right fs-1 text-primary d-sm-none d-md-block position-absolute top-50 start-100 translate-middle"></i>
+                </div>
+            </div>
+            <div class="text-center my-5">
+                <a href="#" class="btn btn-warning text-light ">View All</a>
+            </div>
+        </section>
+        <!-- Students Feedback Section End  -->
     </main>
     <!-- Main End -->
 
