--- a/index.html
+++ b/index.html
@@ -601,8 +601,29 @@
 
         </section>
         <!-- Question and Answer Section End  -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+        <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
+
+        <!-- Trusted Companies Section Start -->
+        <section class="container my-5 d-none d-sm-block d-sm-none d-md-block d-md-none d-lg-block">
+            <div class="my-5 text-center">
+                <h2 class="fs-1 font-bold"> Trusted by over 800+ companies</h2>
+                <div class="row my-5 row-cols-6 d-flex justify-content-evenly align-items-center">
+                    <div><img src="images/company/company-1.png" alt="" class="img-fluid"></div>
+                    <div><img src="images/company/company-2.png" alt="" class="img-fluid"></div>
+                    <div><img src="images/company/company-3.png" alt="" class="img-fluid"></div>
+                    <div><img src="images/company/company-4.png" alt="" class="img-fluid"></div>
+                    <div><img src="images/company/company-5.png" alt="" class="img-fluid"></div>
+                    <div><img src="images/company/company-6.png" alt="" class="img-fluid"></div>
+                </div>
+
+            </div>
+
+        </section>
+        <!-- Trusted Companies Section End -->
     </main>
-    <!-- Main End -->
+    <!-- Main End -->               
 
     <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
