littlebit responsive work using media query

--- a/index.html
+++ b/index.html
@@ -92,38 +92,38 @@
                     <!-- Slide-01 -->
                     <div class="carousel-item active">
                         <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
-                            <div class="d-flex justify-content center align-items-center flex-column ">
+                        <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5 ">
+                            <div class="d-md-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
-                                <p class="py-3">Educational technology is the combined use of computer hardware,
-                                    s<br> oftware, and educational theory and practice to facilitate learning.</p>
-                                <a href="#" class="btn bg-primary text-light text-light"> Get Started</a>
+                                <p class="py-md-3 py-0 -mdte ch-cc">Educational technology is the combined use of computer hardware,
+                                     software, and educational theory and practice to facilitate learning.</p>
+                                <a href="#" class="btn tech-anchor bg-primary text-light text-light"> Get Started</a>
                             </div>
-                        </div>
+                         </div>
                     </div>
                     <!-- Slide-02 -->
                     <div class="carousel-item active">
                         <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
+                        <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
-                                <p class="py-3">Educational technology is the combined use of computer hardware,
-                                    <br> software, and educational theory and practice to facilitate learning.
+                                <p class="py-md-3 ">Educational technology is the combined use of computer hardware,
+                                     software, and educational theory and practice to facilitate learning.
                                 </p>
-                                <a href="#" class="btn bg-primary text-light"> Get Started</a>
+                                <a href="#" class="btn tech-anchor bg-primary text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
                     <!-- Slide-03 -->
                     <div class="carousel-item active">
                         <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block pb-5 mb-5  ">
+                        <div class="carousel-caption tech-cc pb-lg-5 mb-lg-5  ">
                             <div class="d-flex justify-content center align-items-center flex-column ">
                                 <h1 class="learning-title">Get Started Digital <br> Learning</h1>
-                                <p class="py-3">Educational technology is the combined use of computer hardware,
-                                    <br> software, and educational theory and practice to facilitate learning.
+                                <p class="py-md-3 ">Educational technology is the combined use of computer hardware,
+                                     software, and educational theory and practice to facilitate learning.
                                 </p>
-                                <a href="#" class="btn bg-primary text-light"> Get Started</a>
+                                <a href="#" class="btn tech-anchor bg-primary text-light"> Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
             <div class="row row-cols-md-1 row-cols-sm-1 gy-3 gx-3 d-flex justify-content-between mt-5">
                 <div class="card p-0 rounded-4" style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image ">
                             <img src="images/course/course-1.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -179,7 +179,7 @@
                 </div>
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image">
                             <img src="images/course/course-2.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -195,7 +195,7 @@
                 </div>
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image">
                             <img src="images/course/course-3.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -211,7 +211,7 @@
                 </div>
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image">
                             <img src="images/course/course-4.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -227,7 +227,7 @@
                 </div>
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image">
                             <img src="images/course/course-5.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -243,7 +243,7 @@
                 </div>
                 <div class="card mb- p-0 " style="max-width: 540px;">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 course-image">
                             <img src="images/course/course-6.png" class="img-fluid rounded-start  " alt="...">
                         </div>
                         <div class="col-md-8">
@@ -272,10 +272,10 @@
         <section class="container mt-5" id="deals">
             <div class="card mb-3" style="max-width: 100%;">
                 <div class="row g-0">
-                    <div class="col-md-5">
+                    <div class="col-md-6 elearning-image">
                         <img src="images/working.png" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-7 py-5 px-3 elearning-bg-info">
+                    <div class="col-md-6 py-5 px-3 elearning-bg-info">
                         <div class="card-body">
                             <h2 class="card-title fs-1 fw-bold pb-3">Explore The elearning
                                 Institute</h2>
@@ -653,8 +653,8 @@
             <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube s-icons"></i></a>
             <a href="https://twitter.com/monirzkhan526" target="_blank"><i class="fa-brands fa-twitter s-icons"></i></a>
         </div>
-        <div>
-            <small>©2023. TECH Edu-care. All rights reserved. Dhaka-Bangladesh.</small>
+        <div class="text-center">
+            <small>©2023. TECH Edu-care. All rights reserved. </small>
         </div>
     </footer>
     <!-- Footer Section End  -->
